fix player text-align

--- a/app/styles/_player.sass
+++ b/app/styles/_player.sass
@@ -43,6 +43,7 @@
       padding: 0 0 0 5px
       margin: 0
       line-height: 20px
+      text-align: left
     h2
       font-weight: bold
       font-size: 16px
